--- a/assets/key_bindings/default.yaml
+++ b/assets/key_bindings/default.yaml
@@ -33,7 +33,7 @@
   - C-o		: open_file
   - A-S-<del>	: chaotic_user_test
   - C-S-p	: start_api_server
-  - S-<spc>	: function_lookup
+  - /		: function_lookup
 - menu_nav:
   - n		: menu_next_item
   - p		: menu_previous_item
@@ -299,6 +299,8 @@
   - ;		: piano_roll_move_right
   - n		: piano_roll_note_down
   - p		: piano_roll_note_up
+  - <right>	: piano_roll_forward_dur
+  - <left>	: piano_roll_back_dur
   - S-l		: piano_roll_next_note
   - S-j		: piano_roll_prev_note
   - S-p		: piano_roll_up_note
