--- a/assets/key_bindings/default.yaml
+++ b/assets/key_bindings/default.yaml
@@ -215,6 +215,9 @@
   - m		: modal_dismiss
   - g		: modal_dismiss
   - <esc>	: modal_dismiss
+  - <del>	: modal_dismiss
+  - C-<del>	: modal_dismiss
+  - S-<del>	: modal_dismiss
   - C-<ret>	: modal_submit_form
 - text_edit:
   - <ret>	: text_edit_escape
@@ -250,6 +253,9 @@
   - C-S-;	: tabview_move_current_tab_right
   - g		: tabview_escape
   - <esc>	: tabview_escape
+  - <del>	: tabview_escape
+  - C-<del>	: tabview_escape
+  - S-<del>	: tabview_escape
 - autocomplete_list:
   - <tab>	: autocomplete_next
   - S-<tab>	: autocomplete_previous
@@ -260,6 +266,9 @@
   - <ret>	: autocomplete_select
   - <esc>	: autocomplete_escape
   - /		: autocomplete_escape
+  - <del>	: autocomplete_escape
+  - C-<del>	: autocomplete_escape
+  - S-<del>	: autocomplete_escape
 - midi_qwerty:
   - z		: midi_qwerty_octave_down
   - x		: midi_qwerty_octave_up
@@ -325,6 +334,7 @@
   - g-k		: piano_roll_grab_no_edge
   - S-g		: piano_roll_grab_marked_range
   - <del>	: piano_roll_delete
+  - C-<del>	: piano_roll_delete
   - S-<spc>	: piano_roll_play_grabbed_notes
   - S-t		: piano_roll_toggle_tie
   - S-h		: piano_roll_toggle_chord_mode
