randomize phase when phase not sync

--- a/assets/key_bindings/default.yaml
+++ b/assets/key_bindings/default.yaml
@@ -1,4 +1,3 @@
-
 ##################################################################
 #################### JACKDAW KEY BINDINGS ########################
 ##################################################################
@@ -299,6 +298,8 @@
   - [		: null
   - ]		: null
   - `		: null
+  - k-j		: null
+  - k-l		: null
   - <esc>	: midi_qwerty_escape
   - S-q		: midi_qwerty_escape
 - piano_roll:
